--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -1,3 +1,6 @@
+.quiz-title {
+    
+}
 .quiz {
 
     width: 100%;
@@ -13,17 +16,59 @@
     color: #5D5D62;
     position: relative;
 
+    &_deleting {
+
+        background-color: #fb696a; 
+
+    }
+
     &__title {
-    
+
         width: 100%;
         flex-shrink: 1;
-    
+        text-decoration: none;
+
+        &:link {
+
+            color: #5d5d62;
+
+        }
+
+        &:visited {
+
+            color: #5d5d62;
+
+        }   
+
+        &_white {
+
+            color: #FFF;
+
+            &:link {
+
+
+                color: #FFF;
+
+            }
+
+            &:visited {
+
+                color: #FFF;
+
+            }
+
+        }
     }
 
     &__date {
-    
+
         margin-right: 40px;
-    
+
+        &_white {
+
+            color: #FFF;
+        }
+
     }
 
     &__sort {
@@ -39,11 +84,15 @@
     }
 
     &__actions {
-    
+
         display: flex;    
         align-items: center;
         margin-right: 20px;
-    
+        background-color: #FFF;
+        padding: 15px;
+        border-radius: 10px; 
+        position: relative;
+
     }
 
     &__visibility {
@@ -62,7 +111,33 @@
         height: 22px;
         cursor: pointer;
         background: url('/admin/icons/trash.svg') no-repeat center;
+
+        &_yes {
+        
+            background: url('/admin/icons/check.svg') no-repeat center;
+        
+        }
+
+        &_no {
+        
+            background: url('/admin/icons/remove.svg') no-repeat center;
+        
+        }
     
+    }
+
+    &__delete-form {
+
+        display: flex;
+        width: 100%;
+        min-height: 100%;
+        position: absolute;
+        left: 0;
+        background-color: #FFF;
+        border-radius: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+
     }
 
 }
