--- a/src/scss/components/_question.scss
+++ b/src/scss/components/_question.scss
@@ -1,10 +1,13 @@
-.quiz-title {
+.question-wrapper {
+
+    margin-bottom: 20px;
+    background-color: #FFF;
 
 }
-.quiz {
+
+.question {
 
     width: 100%;
-    margin-bottom: 20px;
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -140,4 +143,64 @@
 
     }
 
+    &__add {
+
+        width: 22px;
+        height: 22px;
+        cursor: pointer;
+        background-image: url(/admin/icons/more.svg); 
+        background-size: contain;
+        margin-right: 10px;
+
+    }
+
+}
+
+.add-form {
+
+    padding: 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+
+        font-size: 16px;
+        margin-right: 20px;
+
+    }
+
+    &__head {
+
+        display:  flex;
+        align-items: center;
+        margin-bottom: 20px;
+
+    }
+
+    &__options {
+
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    &__option {
+
+        margin-bottom: 5px;
+
+    }
+
+    &__input {
+
+        max-width: 300px;
+
+    }
+
+    &__button {
+
+        max-width: 300px;
+
+    }
 }
