--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -38,7 +38,7 @@
 
             color: #5d5d62;
 
-        }   
+        }
 
         &_white {
 
@@ -100,8 +100,15 @@
         width: 22px;
         height: 22px;
         cursor: pointer;
-        background: url('/admin/icons/visible.svg') no-repeat center;
         margin-right: 10px;
+
+        &_on {
+            background: url('/admin/icons/visible.svg') no-repeat center;
+        }
+
+        &_off {
+            background: url('/admin/icons/unvisible.svg') no-repeat center;
+        }
 
     }
 
