--- a/src/scss/components/_question.scss
+++ b/src/scss/components/_question.scss
@@ -103,9 +103,15 @@
         width: 22px;
         height: 22px;
         cursor: pointer;
-        background: url('/admin/icons/visible.svg') no-repeat center;
         margin-right: 10px;
 
+        &_on {
+            background: url('/admin/icons/visible.svg') no-repeat center;
+        }
+
+        &_off {
+            background: url('/admin/icons/unvisible.svg') no-repeat center;
+        }
     }
 
     &__delete {
