--- a/src/scss/components/_questions.scss
+++ b/src/scss/components/_questions.scss
@@ -1,5 +1,11 @@
 .questions {
 
+    &__link-back {
 
+        font-size: 14px;
+        font-family: helvetica, sans-serif;
+        color: #5d5d62; 
+
+    }
 
 }
