--- a/src/scss/components/_question.scss
+++ b/src/scss/components/_question.scss
@@ -63,6 +63,12 @@
         }
     }
 
+    &__title-input {
+
+        position: absolute;
+        width: 50%;
+    }
+
     &__date {
 
         margin-right: 40px;
@@ -95,6 +101,8 @@
         padding: 15px;
         border-radius: 10px; 
         position: relative;
+        justify-content: space-between;
+        min-width: 160px;
 
     }
 
@@ -149,6 +157,41 @@
 
     }
 
+    &__edit {
+
+        width: 22px;
+        height: 22px;
+        cursor: pointer;
+        background: url('/admin/icons/edit.svg') no-repeat center;
+
+        &_yes {
+
+            background: url('/admin/icons/check.svg') no-repeat center;
+
+        }
+
+        &_no {
+
+            background: url('/admin/icons/remove.svg') no-repeat center;
+
+        }
+
+    }
+
+    &__edit-form {
+
+        display: flex;
+        width: 100%;
+        min-height: 100%;
+        position: absolute;
+        left: 0;
+        background-color: #FFF;
+        border-radius: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+
+    }
+
     &__add {
 
         width: 22px;
@@ -189,12 +232,32 @@
         margin-bottom: 20px;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
 
     }
 
     &__option {
 
         margin-bottom: 5px;
+        padding-left: 10px;
+        display: flex;
+        width: 300px;
+        justify-content: center;
+
+    }
+
+    &__option-title {
+
+        width: 100%;
+
+    }
+
+    &__option-actions {
+
+        position: relative;
+        width: 20%;
+        display: flex;
+        justify-content: center;
 
     }
 
@@ -207,6 +270,44 @@
     &__button {
 
         max-width: 300px;
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        background-color: #1ab897;
+        color: #fff;
+        font-weight: 700;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
 
     }
+}
+
+.questions-form {
+
+    display: flex;
+    margin-bottom: 10px;
+
+    &__input {
+
+        width: 300px;
+
+    }
+
+    &__submit {
+
+        max-width: 300px;
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        background-color: #1ab897;
+        color: #fff;
+        font-weight: 700;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        box-sizing: border-box;
+
+    }
+
 }
