--- a/src/scss/components/_quiz.scss
+++ b/src/scss/components/_quiz.scss
@@ -60,6 +60,12 @@
         }
     }
 
+    &__title-input {
+
+        position: absolute;
+        width: 50%;
+    }
+
     &__date {
 
         margin-right: 40px;
@@ -92,6 +98,8 @@
         padding: 15px;
         border-radius: 10px; 
         position: relative;
+        justify-content: space-between;
+        min-width: 150px;
 
     }
 
@@ -144,6 +152,70 @@
         border-radius: 20px;
         justify-content: space-evenly;
         align-items: center;
+
+    }
+    
+    &__edit {
+
+        width: 22px;
+        height: 22px;
+        cursor: pointer;
+        background: url('/admin/icons/edit.svg') no-repeat center;
+
+        &_yes {
+
+            background: url('/admin/icons/check.svg') no-repeat center;
+
+        }
+
+        &_no {
+
+            background: url('/admin/icons/remove.svg') no-repeat center;
+
+        }
+
+    }
+
+    &__edit-form {
+
+        display: flex;
+        width: 100%;
+        min-height: 100%;
+        position: absolute;
+        left: 0;
+        background-color: #FFF;
+        border-radius: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+
+    }
+
+}
+
+.quiz-form {
+
+    display: flex;
+    margin-bottom: 10px;
+
+    &__input {
+    
+        width: 350px;
+    
+    }
+
+    &__submit {
+
+        max-width: 300px;
+        width: 100%;
+        padding: 15px;
+        font-size: 14px;
+        background-color: #1ab897;
+        color: #fff;
+        font-weight: 700;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        box-sizing: border-box;
 
     }
 
