--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -7,3 +7,11 @@
     padding: 20px;
 
 }
+
+h1, h2, h3 {
+
+    font-size: unset !important;
+    font-weight: unset !important;
+    line-height: unset !important;
+
+}
