--- a/src/scss/components/_statistics.scss
+++ b/src/scss/components/_statistics.scss
@@ -3,6 +3,14 @@
     display: flex;
     flex-direction: column;
 
+    &__back {
+
+        font-size: 14px;
+        font-family: helvetica, sans-serif;
+        color: #5d5d62;
+
+    }
+
     &__item {
 
         display: flex;
@@ -38,9 +46,9 @@
     }
 
     &__progress-line {
-    
+
         flex-shrink: 0;
-    
+
     }
 
     &__progress-count {
